[gd_scene load_steps=11 format=3 uid="uid://gepvpjeoypa3"]

[ext_resource type="Script" uid="uid://bmjvch64fws8o" path="res://src/scenes/stages/levels/w2/map.gd" id="1_wfa5e"]
[ext_resource type="TileSet" uid="uid://bcjvmgh26fx4s" path="res://tileset_gnd.tres" id="2_xymmc"]
[ext_resource type="TileSet" uid="uid://cjwa3bhr6pdyj" path="res://dmg.tres" id="3_12lhd"]
[ext_resource type="TileSet" uid="uid://dngsaaqgskax2" path="res://fall.tres" id="4_107s6"]
[ext_resource type="PackedScene" uid="uid://dc7qk7hdr0r21" path="res://src/scenes/objects/items/boots/Boots.tscn" id="5_c2rbt"]
[ext_resource type="PackedScene" uid="uid://c7ngk6p3bfl37" path="res://src/scenes/objects/items/hearts/spring_water.tscn" id="6_vpjqx"]
[ext_resource type="PackedScene" uid="uid://sbdi1t1ylk1t" path="res://src/scenes/objects/items/pick/pick.tscn" id="7_kuj70"]
[ext_resource type="PackedScene" uid="uid://didhodifldcaw" path="res://src/scenes/objects/items/cat eye/eye.tscn" id="8_7ywus"]
[ext_resource type="PackedScene" uid="uid://jbn2lmrx5vvh" path="res://src/scenes/objects/items/egg/golden_egg.tscn" id="9_6ljw1"]
[ext_resource type="AudioStream" uid="uid://bfqja81fo5vsr" path="res://assets/audio/typing/1.wav" id="10_a25y2"]

[node name="Map" type="Node2D"]
texture_filter = 1
script = ExtResource("1_wfa5e")

[node name="Structures" type="TileMap" parent="."]
texture_filter = 1
position = Vector2(-1, 0)
scale = Vector2(5, 5)
tile_set = ExtResource("2_xymmc")
format = 2
layer_0/name = "Structures"
layer_1/name = "end"

[node name="Ground" type="TileMap" parent="."]
texture_filter = 1
scale = Vector2(2.5, 2.5)
tile_set = ExtResource("2_xymmc")
format = 2
layer_0/name = "Base"
layer_0/tile_data = PackedInt32Array(1048576, 1, 0, 1048577, 1, 0, 1048578, 1, 0, 1048579, 1, 0, 1048580, 1, 0, 1048581, 1, 0, 1048582, 1, 0, 1048583, 1, 0, 1048584, 1, 0, 1048585, 1, 0, 1048586, 1, 0, 1048587, 1, 0, 1048588, 1, 0, 1048589, 1, 0, 1048590, 1, 0, 1048591, 1, 0, 1048592, 1, 0, 1048593, 1, 0, 1048594, 1, 0, 1048595, 1, 0, 1048596, 1, 0, 1048597, 1, 0, 1048598, 1, 0, 1048599, 1, 0, 1048600, 1, 0, 1048601, 1, 0, 1048602, 1, 0, 1048603, 1, 0, 1048604, 1, 0, 1048605, 1, 0, 1048606, 1, 0, 1048607, 1, 0)
layer_1/name = "Borders"
layer_2/name = "end"

[node name="damage" type="TileMap" parent="." groups=["damage"]]
texture_filter = 1
scale = Vector2(2.5, 2.5)
tile_set = ExtResource("3_12lhd")
format = 2
layer_0/name = "damage"

[node name="fall zone" type="TileMap" parent="." groups=["fall"]]
texture_filter = 1
scale = Vector2(2.5, 2.5)
tile_set = ExtResource("4_107s6")
format = 2
layer_0/name = "falling"
layer_0/modulate = Color(0.634371, 0.248471, 0, 1)

[node name="items" type="Node2D" parent="."]

[node name="Boots" parent="items" instance=ExtResource("5_c2rbt")]
position = Vector2(-3740, 180)

[node name="SpringWater" parent="items" instance=ExtResource("6_vpjqx")]
position = Vector2(6140, 1980)

[node name="Pick" parent="items" instance=ExtResource("7_kuj70")]
position = Vector2(6320, 2660)

[node name="eyes" type="Node2D" parent="items"]

[node name="Eye" parent="items/eyes" instance=ExtResource("8_7ywus")]
visible = false
position = Vector2(962, 610)

[node name="Eye2" parent="items/eyes" instance=ExtResource("8_7ywus")]
visible = false
position = Vector2(660, 2100)

[node name="Eye3" parent="items/eyes" instance=ExtResource("8_7ywus")]
position = Vector2(3140, 2300)

[node name="Eye4" parent="items/eyes" instance=ExtResource("8_7ywus")]
visible = false
position = Vector2(1180, 1340)

[node name="Eye5" parent="items/eyes" instance=ExtResource("8_7ywus")]
visible = false
position = Vector2(-3720, 1340)

[node name="golden_eggs" type="Node2D" parent="items"]

[node name="GoldenEgg" parent="items/golden_eggs" instance=ExtResource("9_6ljw1")]
position = Vector2(6580, 1500)

[node name="GoldenEgg2" parent="items/golden_eggs" instance=ExtResource("9_6ljw1")]
position = Vector2(4180, 2260)

[node name="GoldenEgg3" parent="items/golden_eggs" instance=ExtResource("9_6ljw1")]
position = Vector2(740, 2100)

[node name="Boots" parent="." instance=ExtResource("5_c2rbt")]
position = Vector2(3180, 2660)

[node name="SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_a25y2")

[node name="StartPos" type="Node2D" parent="."]
position = Vector2(24, 597)

[connection signal="grabbed" from="items/Pick" to="." method="_on_goal"]
